:lipstick: Updated Export presets

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="Windows"
+name="DarkplateAlpha-win"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/DarkplateAlpha.exe"
+export_path="../../../Downloads/DarkplateAlpha.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -43,14 +43,14 @@ application/trademarks=""
 
 [preset.1]
 
-name="Linux"
+name="DarkplateAlpha-lin"
 platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Exports/DarkplateAlpha.x86_64"
+export_path="../../../Downloads/DarkplateAlpha.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
