:lipstick: Name Change

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="DarkplateAlpha-win"
+name="CrastinationAlpha-win"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -43,7 +43,7 @@ application/trademarks=""
 
 [preset.1]
 
-name="DarkplateAlpha-lin"
+name="CrastinationAlpha-lin"
 platform="Linux/X11"
 runnable=true
 custom_features=""
