:lipstick: SaveScript Fixing

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,7 +21,7 @@ open_scenes=["res://World/Title.tscn"]
 [ScriptEditor]
 
 open_scripts=["res://Player/Animation.gd", "res://World/Level/End.gd", "res://UI/Fullscreen/FullscreenButton.gd", "res://UI/Itch.ioButton/ItchioButton.gd", "res://JumpPlattform/JumpPlattform.gd", "res://World/Level/Level10/MessagePortal.gd", "res://MovingPlattform/MovingPlattform.gd", "res://UI/Music/MusicStopButton.gd", "res://UI/PauseMenu/PauseMenu.gd", "res://Player/Player.gd", "res://Portal/Portal.gd", "res://UI/Save.gd", "res://Enemies/Slime/Slime.gd", "res://World/Level/Start.gd", "res://World/Title.gd"]
-open_help=["AnimatedSprite2D", "AnimationPlayer", "Area2D", "CharacterBody2D", "TileMap"]
+open_help=["AnimatedSprite2D", "AnimationPlayer", "Area2D", "CharacterBody2D", "ConfigFile", "Dictionary", "FileAccess", "JSON", "MainLoop", "Node", "OS", "String", "TileMap", "Variant"]
 script_split_offset=70
 list_split_offset=0
 
