:lipstick: Further Changes

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://World/Title.tscn"]
+open_scenes=["res://World/Title.tscn", "res://World/Level/Level1.tscn", "res://World/Level/Level2.tscn", "res://World/Level/Level3.tscn", "res://Portal/Portal.tscn", "res://World/Level/Start.tscn", "res://Player/Player.tscn", "res://World/Level/End.tscn"]
 
 [ScriptEditor]
 
@@ -29,8 +29,8 @@ list_split_offset=0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
-log_filter_3=true
+log_filter_1=false
+log_filter_3=false
 log_filter_4=true
 collapse=false
 show_search=true
