:lipstick: Small Chnages

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://World/Title.tscn", "res://World/Level/Level1.tscn", "res://World/Level/Level2.tscn", "res://World/Level/Level3.tscn", "res://Portal/Portal.tscn", "res://World/Level/Start.tscn", "res://Player/Player.tscn", "res://World/Level/End.tscn"]
+open_scenes=["res://World/Title.tscn", "res://World/Level/Level1.tscn", "res://World/Level/Level2.tscn", "res://World/Level/Level3.tscn", "res://Portal/Portal.tscn", "res://World/Level/Start.tscn", "res://Player/Player.tscn", "res://World/Level/End.tscn", "res://World/Level/Level10/Level10.1.tscn", "res://World/Level/Level10/Level10.tscn"]
 
 [ScriptEditor]
 
