:lipstick: Configured Export Presets

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -16,8 +16,10 @@ scripts=["Variant", "TileMap", "String", "OS", "Node", "MainLoop", "JSON", "File
 
 [dialog_bounds]
 
-project_settings=Rect2(776, 555, 900, 700)
+project_settings=Rect2(776, 666, 900, 700)
 search_help=Rect2(640, 471, 1280, 720)
+editor_settings=Rect2(830, 407, 900, 700)
+export=Rect2(830, 444, 900, 708)
 
 [color_picker]
 
